--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "4.13.0",
     "dotenv": "16.0.3",
     "fastify": "^4.17.0",
     "zod": "3.21.4"
@@ -20,6 +21,7 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "1.2.0",
     "@types/node": "^18.16.2",
+    "prisma": "4.13.0",
     "tsup": "^6.7.0",
     "tsx": "^3.12.6",
     "typescript": "^5.0.4"
