--- a/package.json
+++ b/package.json
@@ -7,23 +7,35 @@
     "dev": "tsx watch src/server.ts",
     "start": "node build/server.js",
     "build": "tsup src --out-dir build",
-    "lint": "eslint src --ext .ts --fix"
+    "lint": "eslint src --ext .ts --fix",
+    "test": "vitest run",
+    "test:watch": "vistest",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "4.13.0",
+    "@types/bcryptjs": "2.4.2",
+    "bcryptjs": "2.4.3",
     "dotenv": "16.0.3",
     "fastify": "^4.17.0",
+    "uuid": "9.0.0",
     "zod": "3.21.4"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "1.2.0",
     "@types/node": "^18.16.2",
+    "@types/uuid": "9.0.1",
+    "@vitest/coverage-c8": "0.30.1",
+    "@vitest/ui": "0.30.1",
     "prisma": "4.13.0",
     "tsup": "^6.7.0",
     "tsx": "^3.12.6",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "vite-tsconfig-paths": "4.2.0",
+    "vitest": "0.30.1"
   }
 }
