--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,7 @@
 NODE_ENV=dev
+
+## Database
+DATABASE_URL="postgresql://docker:docker@localhost:5432/mydb?ignitenode03=public"
+
+## Auth 
+JWT_SECRET=8f9af15bace57dc3103e8a10f2d3583e25098f95
