--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "start": "node build/server.js",
     "build": "tsup src --out-dir build",
     "lint": "eslint src --ext .ts --fix",
-    "test": "vitest run",
-    "test:watch": "vistest",
+    "test:create-prisma-environment": "sudo npm link ./prisma/vitest-environment-prisma",
+    "test:install-prisma-environment": "npm link vitest-environment-prisma",
+    "pretest:2e2": "run-s test:create-prisma-environment test:install-prisma-environment",
+    "test:2e2": "vitest run --dir src/_tests/E2E",
+    "test": "vitest run --dir src/_tests/Unitary",
+    "test:watch": "vistest --dir src/_tests/Unitary",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui"
   },
@@ -17,6 +21,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/jwt": "6.7.1",
     "@prisma/client": "4.13.0",
     "@types/bcryptjs": "2.4.2",
     "bcryptjs": "2.4.3",
@@ -32,6 +37,7 @@
     "@types/uuid": "9.0.1",
     "@vitest/coverage-c8": "0.30.1",
     "@vitest/ui": "0.30.1",
+    "npm-run-all": "4.1.5",
     "prisma": "4.13.0",
     "tsup": "^6.7.0",
     "tsx": "^3.12.6",
