--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "start": "node build/server.js",
     "build": "tsup src --out-dir build",
     "lint": "eslint src --ext .ts --fix",
-    "test:create-prisma-environment": "sudo npm link ./prisma/vitest-environment-prisma",
+    "test:create-prisma-environment": "npm link ./prisma/vitest-environment-prisma",
     "test:install-prisma-environment": "npm link vitest-environment-prisma",
-    "pretest:2e2": "run-s test:create-prisma-environment test:install-prisma-environment",
-    "test:2e2": "vitest run --dir src/_tests/E2E",
+    "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
+    "test:e2e": "vitest run --dir src/_tests/E2E",
     "test": "vitest run --dir src/_tests/Unitary",
     "test:watch": "vistest --dir src/_tests/Unitary",
     "test:coverage": "vitest run --coverage",
@@ -34,11 +34,13 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "1.2.0",
     "@types/node": "^18.16.2",
+    "@types/supertest": "2.0.12",
     "@types/uuid": "9.0.1",
     "@vitest/coverage-c8": "0.30.1",
     "@vitest/ui": "0.30.1",
     "npm-run-all": "4.1.5",
     "prisma": "4.13.0",
+    "supertest": "6.3.3",
     "tsup": "^6.7.0",
     "tsx": "^3.12.6",
     "typescript": "^5.0.4",
